--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>OneMusic Docs</title>
+  <title>Shincyan1900</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -13,7 +13,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'OneMusic',
+      name: 'Shincyan1900',
       repo: '',
       loadSidebar: true,
       coverpage: true,
